--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: elixir
-elixir: '1.5'
+elixir:
+  - '1.2.2'
 
 script:
--mix test
--mix credo --strict
+  - mix test
+  - mix credo --strict
